--- a/index.html
+++ b/index.html
@@ -321,9 +321,20 @@
             container.appendChild(div);
         }
     </script>
-</div>
-</body>
+<script>
+        // ... τα script για το modal και το speech ...
+    </script>
+
+    <div style="margin-top: 30px; padding: 20px; background-color: #f0f8ff; border-top: 2px solid #007bff; font-family: sans-serif;">
+        
+        <script>
+            // ... τα δεδομένα ...
+        </script>
+    </div>
+    </body>
 </html>
+</html>
+
 
 
 
